--- a/app/assets/stylesheets/aside.css
+++ b/app/assets/stylesheets/aside.css
@@ -5,7 +5,7 @@ aside {
   position: absolute;
   top: 125px;
   color: #191919;
-  max-width: 550px;
+  max-width: 950px;
 }
 .intro-text {
   padding: 10px;
@@ -13,8 +13,9 @@ aside {
   border: 1px solid black;
 }
 #aside-filler {
-  margin: 0 0 0 150px;
+  margin: 0 0 0 450px;
   padding: 8px;
+  left: 200px;
   background-color: ghostwhite;
   border-radius: 6px;
   box-shadow: 1px 1px 2px #bfbfbf;
@@ -25,7 +26,7 @@ aside {
 }
 .tweet-text {
   padding: 0 0 0 10px;
-  /*font-size: 20px;*/
+  font-size: 20px;
 }
 #nav-info, #aside-info {
   display: none;
