--- a/app/assets/stylesheets/canvas.css
+++ b/app/assets/stylesheets/canvas.css
@@ -1,3 +1,5 @@
 canvas {
   z-index: 0;
+  position: absolute;
+  width: 100%;
 }
